Alignments Fixed

--- a/src/app/Components/cards/cards.component.scss
+++ b/src/app/Components/cards/cards.component.scss
@@ -2,7 +2,7 @@
   width: 275px;
   margin: 10px;
   padding: 20px;
-  border-radius: 0 25px; 
+  border-radius: 0 25px;
   border: 2px solid rgb(0, 52, 141);
   background-color: rgb(236, 243, 255);
 }
@@ -35,6 +35,7 @@ button {
 @media only screen and (max-width: 650px) {
   .container {
     width: 100%;
+    margin: 10px 0;
     padding: 20px;
   }
 }
