--- a/src/app/Components/products-categories/products-categories.component.scss
+++ b/src/app/Components/products-categories/products-categories.component.scss
@@ -1,7 +1,15 @@
 p {
-  font-size: 50px;
+  font-size: 45px;
   font-weight: 900;
   text-align: center;
   margin: 10px 0 -30px 0;
+  padding: 0 10px;
   color: rgb(0, 52, 141);
+}
+
+@media only screen and (max-width: 650px) {
+  p {
+    padding: 10px;
+    font-size: 40px;
+  }
 }
